--- a/vendas.html
+++ b/vendas.html
@@ -1,33 +1,34 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-,<link rel="stylesheet" href="vendas.css">
+    <link rel="stylesheet" href="reset.css">
+<link rel="stylesheet" href="style.css">
     <title>Document</title>
-</head>
-<body>
-       
-    
-<div class="wrapper">
+ </head>
+ <body>
+    <header>
+<div class="caixa">
+<h1><img src="logo.png" alt="logo da loja de roupas"></h1>
 
-        <div> 
+<nav>
+<ul>
+<li><a href="index.html">home</a></li>
+<li><a href="produtos.html">produtos.html</a></li>
+<li><a href="contato.html">contato</a></li>
+</ul>
+</nav>
+</div>
+</header>
 
-            <img id="roupas" src="roupas.jpeg" alt="roupas" width="327" height="420">
+<main>
+    <form>
+<label for="nomesobrenome">nomesobrenome</label>
+<input type="text" id="nomesobrenome" class="inpult-padrao" required>
 
-        </div>
-        <div class="produtoinfo">
-            </div class="produtotexto">
 
-            <h1>compre suas roupas aqui</h1>
-            <h2>simples pratico e barato</h2>
 
-        <p>uma loja ideal pra quem esta procurando roupa barata  temos de todos os tamanhos do piqueno ate o esxtra grande venha conferir</p>
-         <p>nosso horario de atendimento e das 9:00 da manhã as 10:00 da noite</p>
-         </div>
-     </div class="botaopreco">
-<p><span>R$ 150,00</span></p>
-<button type="button">compre agora</button>
-</body>
-</html>
+ </body>
+ </html>
